Fixed stretched npc head portraits and icons on mobile

--- a/packages/guide/src/app/shared/components/item-icon/item-icon.component.scss
+++ b/packages/guide/src/app/shared/components/item-icon/item-icon.component.scss
@@ -3,7 +3,7 @@
   display: block;
 
   & > img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
     aspect-ratio: 1/1;
   }
